# fnug

./: .envrc  .fnug.json  .fnug.yaml  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  flake.nix  pyproject.toml  rust-toolchain.toml
.github/: copilot-instructions.md
.github/workflows/: build.yaml  ci.yaml  nix.yaml  release.yaml
docs/: .fnug.yaml  demo.tape
python/fnug/: __init__.py  config.py
rust/: Cargo.toml
rust/src/: command_group.rs  config_file.rs  git.rs  lib.rs  ui.rs
rust/src/commands/: auto.rs  command.rs  group.rs  inherit.rs
rust/src/pty/: command.rs  messages.rs  mod.rs  python.rs  terminal.rs
rust/src/selectors/: always.rs  git.rs  mod.rs  watch.rs
src/: check.rs  config_file.rs  init_hooks.rs  lib.rs  logger.rs  mcp.rs  theme.rs  workspace.rs
src/commands/: auto.rs  command.rs  group.rs  inherit.rs  mod.rs
src/fnug/: __init__.py  __main__.py  cli.py  config.py  core.pyi  git.py  logging.py  pyte2rich.py  scheduler.py  terminal_emulator.py
src/fnug/ui/: app.py  app.tcss
src/fnug/ui/components/: context_menu.py  context_menu.tcss  lint_tree.py  terminal.py
src/pty/: command.rs  messages.rs  mod.rs  terminal.rs
src/selectors/: always.rs  git.rs  mod.rs  watch.rs
src/setup/: hooks.rs  mcp.rs  mod.rs  workspace.rs
src/tui/: app.rs  context_menu.rs  event.rs  key_handler.rs  log_state.rs  mod.rs  mouse_handler.rs  overlay.rs  process_manager.rs  render.rs  terminal_widget.rs  toolbar.rs  tree_state.rs  tree_widget.rs
src/tui/snapshots/: fnug__tui__context_menu__tests__snapshot_command_menu_failed.snap  fnug__tui__context_menu__tests__snapshot_command_menu_pending.snap  fnug__tui__context_menu__tests__snapshot_command_menu_running_selected.snap  fnug__tui__context_menu__tests__snapshot_group_menu_collapsed_none_selected.snap  fnug__tui__context_menu__tests__snapshot_group_menu_expanded_all_selected.snap  fnug__tui__context_menu__tests__snapshot_group_menu_partial_selection.snap  fnug__tui__context_menu__tests__snapshot_terminal_menu_no_process.snap  fnug__tui__context_menu__tests__snapshot_terminal_menu_running_scrolled.snap  fnug__tui__tree_widget__tests__snapshot_basic_tree.snap  fnug__tui__tree_widget__tests__snapshot_collapsed_groups.snap  fnug__tui__tree_widget__tests__snapshot_nested_tree.snap  fnug__tui__tree_widget__tests__snapshot_status_indicators.snap
tests/: integration.rs  test_lint_tree.py
