[package]
name = "fnug_core"
version = "0.0.25"
edition = "2021"

[lib]
name = "fnug_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.11.5"
git2 = { version = "0.19.0", default-features = false }
log = "0.4.22"
pyo3 = { version = "0.23.2", features = ["experimental-async"] }
pyo3-log = "0.12.0"
pyo3-stub-gen = { version = "0.6.0", default-features = false, optional = true }
regex = "1.10.6"
regex-cache = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.3"
uuid = { version = "1.10.0", features = ["v4"] }
pyo3-async-runtimes = { version = "0.23.0", features = ["tokio-runtime"] }
notify = "7.0.0"
notify-debouncer-full = "0.4.0"
portable-pty = "0.8.1"
vt100 = "0.15.2"
tokio = { version = "1.41.1", features = ["full", "sync"] }
anstyle = "1.0.10"
parking_lot = "0.12.3"
crossbeam-channel = "0.5.13"

[patch.crates-io]
vt100 = { path = "vendor/vt100" }

[[bin]]
name = "stub_gen"
doc = false
required-features = ["stub_gen"]

[profile.release]
debug = true

[features]
stub_gen = ["pyo3-stub-gen"]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py312"]
default = ["extension-module"]

[dev-dependencies]
tempfile = "3.14.0"
